--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=hJCKsa0AAAAJ"
   # inspire-hep      : # URL
   # impactstory      : # URL
-  orcid            : "https://orcid.org/my-orcid?orcid=0000-0003-0393-5197"
+  orcid            : "https://orcid.org/0000-0003-0393-5197"
   # semantic         : # URL
   # ssrn             : # URL
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
